# invoice

./: .gitignore  MANIFEST.in  Taskfile.yml  pyproject.toml  requirements.txt
invoice/: app.py
invoice/backend/: simple.py
invoice/backend/util/: decorators.py
invoice/resources/: app.toml
